<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>io.github.danthe1st</groupId>
	<artifactId>simple-mail-client</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<javafx.version>23</javafx.version>
		<angus.version>2.0.3</angus.version>
		<main.class>
			io.github.danthe1st.simple_mail_client/io.github.danthe1st.simple_mail_client.ui.SimpleMailClient</main.class>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-controls</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-web</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-swing</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.eclipse.angus</groupId>
			<artifactId>angus-mail</artifactId>
			<version>${angus.version}</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.18.3</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<release>21</release>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<id>list-deps</id>
						<goals>
							<goal>build-classpath</goal>
						</goals>
						<configuration>
							<includeGroupIds>org.openjfx</includeGroupIds>
							<outputFile>${project.build.directory}/dependencies.list</outputFile>
						</configuration>
					</execution>
					<execution>
						<id>copy-native</id>
						<goals>
							<goal>unpack-dependencies</goal>
						</goals>
						<configuration>
							<includes>**/*.so,**/*.dll,**/*.dylib</includes>
							<outputDirectory>${project.build.directory}/native</outputDirectory>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<outputDirectory>${project.build.directory}/jars</outputDirectory>
				</configuration>
			</plugin>
			<plugin>
				<!-- ./target/simple-mail-client
				-Djavafx.toolkit=com.sun.javafx.tk.quantum.QuantumToolkit
				-Dprism.verbose=true-->
				<groupId>org.graalvm.buildtools</groupId>
				<artifactId>native-maven-plugin</artifactId>
				<version>0.10.6</version>
				<configuration>
					<quickBuild>true</quickBuild>
					<classpath>
					</classpath>
					<mainClass>io.github.danthe1st.simple_mail_client.Launcher</mainClass>
					<verbose>true</verbose>
					<buildArgs>
						<buildArg>-p</buildArg>
						<buildArg>/@${project.build.directory}${file.separator}dependencies.list</buildArg>
						<buildArg>--add-reads</buildArg>
						<buildArg>org.eclipse.angus.mail=org.graalvm.nativeimage</buildArg>
						<buildArg>--add-reads</buildArg>
						<buildArg>org.eclipse.angus.activation=org.graalvm.nativeimage</buildArg>
						<buildArg>-H:+ForeignAPISupport</buildArg>
						<buildArg>--enable-native-access=ALL-UNNAMED</buildArg>
						<buildArg>--initialize-at-build-time=io.github.danthe1st.simple_mail_client.ui.webdisplay.WebDisplayOption</buildArg>
						<buildArg>--enable-native-access=javafx.graphics</buildArg>
					</buildArgs>

					<systemProperties>
						<java.awt.headless>false</java.awt.headless>
						<emailView.framework>SWING</emailView.framework>
						<javafx.toolkit>com.sun.javafx.tk.quantum.QuantumToolkit</javafx.toolkit>
						<java.library.path>native</java.library.path>
					</systemProperties>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>0.0.8</version>
				<executions>
					<execution>
						<id>default-cli</id>
						<configuration>
							<mainClass>${main.class}</mainClass>
							
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<profiles>
		<profile>
			<id>nativeDebug</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.graalvm.buildtools</groupId>
						<artifactId>native-maven-plugin</artifactId>
						<configuration>
							<quickBuild>true</quickBuild>
							<systemProperties combine.children="append">
								<prism.verbose>true</prism.verbose>
								<javafx.verbose>true</javafx.verbose>
							</systemProperties>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>nativeProd</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.graalvm.buildtools</groupId>
						<artifactId>native-maven-plugin</artifactId>
						<configuration>
							<buildArgs combine.children="append">
								<buildArg>-O3</buildArg>
							</buildArgs>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
